# pytest-respect

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGES.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
.github/workflow/: python-package.yml
.github/workflows/: python-package.yml
CHANGES/: index.html
api-ext/: index.html
api-resources/: index.html
api-utils/: index.html
docs/: CHANGES.md  README.md  api-ext.md  api-resources.md  api-utils.md
junit/: pytest-coverage.txt  test-results.xml
scripts/: check-all  publish-docs  pytest-extras  release
search/: search_index.json
src/pytest_respect/: _fakes.py  plugin.py  resources.py  utils.py
src/pytest_respect/ext/: jsonyx.py
tests/pytest_resources/: test_resources.py  test_utils.py
tests/pytest_resources/ext/: test_jsonyx.py
tests/pytest_resources/test_resources/: test_expected_pydantic__defaults.json
